[metadata]
name = trio2o
summary = the Trio2o provides an OpenStack API gateway to allow multiple OpenStack instances, spanning in one site or multiple sites or in hybrid cloud, to be managed as a single OpenStack cloud
description-file = README.rst
author = OpenStack Trio2o
author-email = openstack-dev@lists.openstack.org
home-page = wiki.openstack.org/wiki/Trio2o
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    trio2o

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = trio2o/locale
domain = trio2o

[update_catalog]
domain = trio2o
output_dir = trio2o/locale
input_file = trio2o/locale/trio2o.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = trio2o/locale/trio2o.pot

[entry_points]

console_scripts =
    trio2o-db-manage = trio2o.cmd.manage:main
    trio2o-api = trio2o.cmd.api:main
    trio2o-xjob = trio2o.cmd.xjob:main
    trio2o-nova-apigw = trio2o.cmd.nova_apigw:main
    trio2o-cinder-apigw = trio2o.cmd.cinder_apigw:main

oslo.config.opts =

    trio2o.api = trio2o.api.opts:list_opts
    trio2o.common = trio2o.common.opts:list_opts
    trio2o.db = trio2o.db.opts:list_opts

    trio2o.nova_apigw = trio2o.nova_apigw.opts:list_opts
    trio2o.cinder_apigw = trio2o.cinder_apigw.opts:list_opts
    trio2o.xjob = trio2o.xjob.opts:list_opts

tempest.test_plugins =
    trio2o_tests = trio2o.tempestplugin.plugin:Trio2oTempestPlugin

trio2o.common.schedulers =
    pod_manager = trio2o.common.scheduler.pod_manager:PodManager
    bottom_pod_filter = trio2o.common.scheduler.filters.bottom_pod_filter:BottomPodFilter
    filter_scheduler = trio2o.common.scheduler.filter_scheduler:FilterScheduler
